[package]
name = "kartographer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
serde_json = "1"
mongodb = "2"
chrono = "0.4"

[dependencies.tokio]
version = '1'
features = ['macros', 'rt-multi-thread']

[dependencies.serde]
version = '1'
features = ['derive']

[dependecies.bson]
version = '2'
features = ['chrono-0_4']
